fix: Modification of Redis cache list process generation method