@@ -36,6 +36,7 @@ import org.springframework.util.StringUtils;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 /**
  * @author loong
@@ -148,7 +149,7 @@ public class UserFacade implements IUserFacade {
             menuDTO.setMenuId(menuPO.getId());
             menuDTO.setMenuCode(menuPO.getCode());
             return menuDTO;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @CacheEvict(cacheNames = {CacheKeyConstants.ENTITY_PERMISSION_CACHE_NAME_PREFIX,
